--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,7 @@ services:
     volumes:
       - db_data:/data/db
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "mysql", "-p=$${cat $$MYSQL_ROOT_PASSWORD_FILE}"]
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "-p=$${cat $$MYSQL_ROOT_PASSWORD_FILE}"]
       interval: 4s
       timeout: 5s
       retries: 5
