--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,36 @@
 {
-  "type": "module",
-  "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.5.2",
-    "typescript": "^5.1.6"
-  },
-  "name": "classweb",
+  "name": "server",
   "version": "0.0.1",
-  "main": "dist/app.js",
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/morgan": "^1.9.4",
-    "@vitalets/google-translate-api": "^9.2.0",
-    "@types/express": "^4.17.17"
-  },
+  "description": "",
+  "main": "dist/server.js",
   "scripts": {
-    "start:dev": "npx nodemon --watch './src/' -e ts,ets,mts,json --exec 'tsc && node ./dist/server.js'",
-    "start": "node ./dist/server.js",
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "tsc && node dist/server.js",
+    "start:dev": "nodemon --watch src  -e ts,js,json --exec 'node --loader ts-node/esm --inspect ./src/server.ts'"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "type": "module",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.6.0",
+    "nodemon": "^3.0.1",
+    "sha256": "^0.2.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^18.2.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.5.1",
+    "@types/sha256": "^0.2.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.1.6"
+  }
 }
